--- a/public/404.html
+++ b/public/404.html
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="SIMONA SIMONA">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | SIMONA SIMONA">
-  <meta property="og:description" content="PhD Candidate"><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="PhD Candidate"><meta property="og:image" content="/img/avatar.jpg">
   <meta property="og:locale" content="en-us">
   
   
