Commit changes to talks

--- a/public/404.html
+++ b/public/404.html
@@ -388,7 +388,7 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="/talk/example/">Example Talk</a></li>
+    <li><a href="/talk/example/">Introduction to R</a></li>
   </ul>
   
   
