Commit changes to the website

--- a/public/publication/person-re-id/index.html
+++ b/public/publication/person-re-id/index.html
@@ -480,7 +480,7 @@
   
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="http://arxiv.org/pdf/1512.04133v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="http://redfame.com/journal/index.php/ijsss/article/view/3300" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -493,11 +493,7 @@
 
 
 
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example-slides/" target="_blank">
-    Slides
-  </a>
-  
+
 
 
 
@@ -709,7 +705,7 @@
   
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="http://arxiv.org/pdf/1512.04133v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="http://redfame.com/journal/index.php/ijsss/article/view/3300" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -722,11 +718,7 @@
 
 
 
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/slides/example-slides/" target="_blank">
-    Slides
-  </a>
-  
+
 
 
 
@@ -776,7 +768,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In <em>Signal Image Technology &amp; Internet Systems (SITIS)</em>, IEEE.</div>
+          <div class="col-12 col-md-9">In <em>International Journal of Social Science Studies</em>.</div>
         </div>
       </div>
       <div class="col-md-1"></div>
@@ -786,8 +778,7 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><p>More detail can easily be written here using <em>Markdown</em> and $\rm \LaTeX$ math code.</p>
-</div>
+    <div class="article-style"></div>
 
     
 
