--- a/public/tutorial/index.html
+++ b/public/tutorial/index.html
@@ -119,7 +119,7 @@
   
   <meta property="og:site_name" content="SIMONA SIMONA">
   <meta property="og:url" content="/tutorial/">
-  <meta property="og:title" content="Overview | SIMONA SIMONA">
+  <meta property="og:title" content="Workshops | SIMONA SIMONA">
   <meta property="og:description" content="PhD Candidate"><meta property="og:image" content="/img/avatar.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -130,7 +130,7 @@
 
   
 
-  <title>Overview | SIMONA SIMONA</title>
+  <title>Workshops | SIMONA SIMONA</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -370,16 +370,11 @@
   
   
   <div class="docs-toc-item active">
-    <a class="docs-toc-link" href="/tutorial/">Overview</a>
-
-  </div>
-  
-  <div class="docs-toc-item">
-    <a class="docs-toc-link" href="/tutorial/example/">Example Topic</a>
+    <a class="docs-toc-link" href="/tutorial/">Workshops</a>
     <ul class="nav docs-sidenav">
       
       <li >
-        <a href="/tutorial/example/">Example Page</a>
+        <a href="/tutorial/example/">Introduction to R (University of Zambia)</a>
       </li>
       
     </ul>
@@ -413,22 +408,10 @@
       <article class="article" itemscope itemtype="http://schema.org/Article">
 
         <div class="docs-article-container">
-          <h1 itemprop="name">Overview</h1>
+          <h1 itemprop="name">Workshops</h1>
 
           <div class="article-style" itemprop="articleBody">
-            <p>This feature can be used for publishing content such as:</p>
-
-<ul>
-<li><strong>Project or software documentation</strong></li>
-<li><strong>Online courses</strong></li>
-<li><strong>Tutorials</strong></li>
-</ul>
-
-<p>The parent folder may be renamed, for example, to <code>docs</code> for project documentation or <code>course</code> for creating an online course.</p>
-
-<p>To disable this feature, either delete the parent folder, or set <code>draft = true</code> in the front matter of all its pages.</p>
-
-<p>After renaming or deleting the parent folder, you may wish to update any <code>[[menu.main]]</code> menu links to it in the <code>config.toml</code>.</p>
+            <p>This page hosts documentations of all my workshops. In the sidebar, select the name of the workshop you are enrolled in and follow instructions accordingly</p>
 
           </div>
 
