--- a/public/404.html
+++ b/public/404.html
@@ -374,11 +374,11 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="/publication/person-re-id/">Intimate Partner Violence (IPV) In Zambia: Sociodemographic Characteristics and Use of Maternal Healthcare</a></li>
+    <li><a href="/publication/intimate-violence/">Intimate Partner Violence (IPV) In Zambia: Sociodemographic Characteristics and Use of Maternal Healthcare</a></li>
   </ul>
   
   <ul>
-    <li><a href="/publication/clothing-search/">Mobile visual clothing search</a></li>
+    <li><a href="/publication/risk-behaviour/">“Life at the River is a Living Hell:” Qualitative study of trauma, mental health, substance use and HIV risk behaviour among female fish traders from the Kafue Flatlands in Zambia</a></li>
   </ul>
   
   
