changes to posts

--- a/public/index.html
+++ b/public/index.html
@@ -1348,7 +1348,7 @@ background-color: #4bb4e3;
 
     
     <div class="article-style" itemprop="articleBody">
-      Building a website Check this post later, I will come back to it to finish it. But before you mistake me for a coder and a computer …
+      Building a website I will come back to this post later to finish it up. But before anyone mistakes me for a coder or a computer science …
     </div>
     
 
@@ -1384,7 +1384,7 @@ background-color: #4bb4e3;
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    2 min read
+    3 min read
   </span>
   
 
