--- a/public/project/internal-project/index.html
+++ b/public/project/internal-project/index.html
@@ -722,7 +722,7 @@
   <div class="media-body">
     <h5 class="card-title" itemprop="name"><a href="/authors/admin">Simona Simona</a></h5>
     <h6 class="card-subtitle">PhD Candidate</h6>
-    <p class="card-text" itemprop="description">My research interests include computational social sciences, multilevel modelling, research design and global health.</p>
+    <p class="card-text" itemprop="description">My research interests include computational social sciences, multilevel modelling, research design, sociology of medicine and global health.</p>
     <ul class="network-icon" aria-hidden="true">
       
       
