new site public

--- a/public/404.html
+++ b/public/404.html
@@ -340,6 +340,14 @@
     <li><a href="/post/creating-website/">Building a website with Blogdown and R Markdown</a></li>
   </ul>
   
+  <ul>
+    <li><a href="/post/jupyter/">Display Jupyter Notebooks with Academic</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/post/getting-started/">Academic: the website designer for Hugo</a></li>
+  </ul>
+  
   
 
   
@@ -383,6 +391,10 @@
 </div>
 <div class="container">
   <footer class="site-footer">
+  
+  <p class="powered-by">
+    <a href="/privacy/">Privacy Policy</a>
+  </p>
   
 
   <p class="powered-by">
