--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -630,6 +630,10 @@
 <div class="container">
   <footer class="site-footer">
   
+  <p class="powered-by">
+    <a href="/privacy/">Privacy Policy</a>
+  </p>
+  
 
   <p class="powered-by">
     
