Changes to the internal project

--- a/public/404.html
+++ b/public/404.html
@@ -379,11 +379,11 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="/project/external-project/">External Project</a></li>
+    <li><a href="/project/internal-project/">PhD Thesis</a></li>
   </ul>
   
   <ul>
-    <li><a href="/project/internal-project/">Internal Project</a></li>
+    <li><a href="/project/external-project/">External Project</a></li>
   </ul>
   
   
