--- a/public/index.html
+++ b/public/index.html
@@ -628,7 +628,7 @@
   <div class="col-12 col-sm-4">
     <div class="featurette-icon"><i class="fas fa-microphone-alt"></i></div>
     <h3>Inspiration</h3>
-    <p>What the people need is inspiration. I give inspirational talks. I also read an inspirational book every month. Put in your details below to receive summaries of the books I read monthly</p>
+    <p>What the people need is inspiration. I give inspirational talks. I also read an inspirational book every month. Put in your details in my contacts below to receive summaries of the books I read monthly</p>
   </div>
   
 </div>
