New commit publications

--- a/public/404.html
+++ b/public/404.html
@@ -362,6 +362,10 @@
     <li><a href="/publication/risk-behaviour/">“Life at the River is a Living Hell:” Qualitative study of trauma, mental health, substance use and HIV risk behaviour among female fish traders from the Kafue Flatlands in Zambia</a></li>
   </ul>
   
+  <ul>
+    <li><a href="/publication/truck-drivers/">A Qualitative study of migrant-related stressors, Psychological outcomes and HIV risk behaviour among truck drivers in Zambia</a></li>
+  </ul>
+  
   
 
   
