--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -383,6 +383,15 @@
     </div>
   </div>
   
+  <div>
+    <h2><a href="/publication/truck-drivers/">A Qualitative study of migrant-related stressors, Psychological outcomes and HIV risk behaviour among truck drivers in Zambia</a></h2>
+    <div class="article-style">
+      
+      Truck drivers are part of mobile populations which have been noted as a key population at risk of HIV in Zambia. This study was aimed at: (1) determining potentially traumatic events (PTEs), labour migrant-related stressors, psychosocial problems and …
+      
+    </div>
+  </div>
+  
 
   
 
