New commit publications

--- a/public/404.html
+++ b/public/404.html
@@ -366,6 +366,10 @@
     <li><a href="/publication/truck-drivers/">A Qualitative study of migrant-related stressors, Psychological outcomes and HIV risk behaviour among truck drivers in Zambia</a></li>
   </ul>
   
+  <ul>
+    <li><a href="/publication/food-sup/">Influence of food supplements on test- ing for HIV and AIDS and adhering to treatment in a resource poor rural setting: A case of Chivuna, Southern Zambia</a></li>
+  </ul>
+  
   
 
   
