--- a/public/project/internal-project/index.html
+++ b/public/project/internal-project/index.html
@@ -255,7 +255,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/tutorial/">
             
-            <span>Tutorials</span>
+            <span>Training</span>
             
           </a>
         </li>
