New publication commit

--- a/public/404.html
+++ b/public/404.html
@@ -347,6 +347,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/male-involvement/">Exploring Male Participation in Maternal Healthcare in a Patriarchal Population: An Agent-Based Model</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/intimate-violence/">Intimate Partner Violence (IPV) In Zambia: Sociodemographic Characteristics and Use of Maternal Healthcare</a></li>
   </ul>
   
