--- a/public/publication/male-involvement/index.html
+++ b/public/publication/male-involvement/index.html
@@ -485,12 +485,20 @@
   
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://simonajsimona.com/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/simonajsimona/sjs-website/blob/master/public/male_involvement.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/simonajsimona/sjs-website/blob/master/public/codes/male_involvement.Rmd" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
