--- a/public/tutorial/example/index.html
+++ b/public/tutorial/example/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Before the workshop begins, make you have downloaded and installed R on your machine. I have written a document containing instructions about downloading and installing R. Find it here if you need it. It also has basic R commands.
+  <meta name="description" content="Before the workshop begins, make you have downloaded and installed R on your machine. I have written a document containing instructions about downloading and installing R. Find it here if you need it. It also has basic R commands. The workshop schedule is here
 The folder containing lab handouts and datasets should be downloaded from here">
 
   
@@ -121,7 +121,7 @@ The folder containing lab handouts and datasets should be downloaded from here">
   <meta property="og:site_name" content="SIMONA SIMONA">
   <meta property="og:url" content="/tutorial/example/">
   <meta property="og:title" content="Introduction to R (University of Zambia) | SIMONA SIMONA">
-  <meta property="og:description" content="Before the workshop begins, make you have downloaded and installed R on your machine. I have written a document containing instructions about downloading and installing R. Find it here if you need it. It also has basic R commands.
+  <meta property="og:description" content="Before the workshop begins, make you have downloaded and installed R on your machine. I have written a document containing instructions about downloading and installing R. Find it here if you need it. It also has basic R commands. The workshop schedule is here
 The folder containing lab handouts and datasets should be downloaded from here"><meta property="og:image" content="/img/avatar.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -404,7 +404,7 @@ The folder containing lab handouts and datasets should be downloaded from here">
           <h1 itemprop="name">Introduction to R (University of Zambia)</h1>
 
           <div class="article-style" itemprop="articleBody">
-            <p>Before the workshop begins, make you have downloaded and installed R on your machine. I have written a document containing instructions about downloading and installing R. Find it <a href="https://simonajsimona.com/R-Studio_Environment.pdf" target="_blank">here</a> if you need it. It also has basic R commands.</p>
+            <p>Before the workshop begins, make you have downloaded and installed R on your machine. I have written a document containing instructions about downloading and installing R. Find it <a href="https://simonajsimona.com/R-Studio_Environment.pdf" target="_blank">here</a> if you need it. It also has basic R commands. The workshop schedule is <a href="https://simonajsimona.com/training/unza-r-workshp.doc" target="_blank">here</a></p>
 
 <p>The folder containing lab handouts and datasets should be downloaded from here</p>
 
