--- a/public/project/internal-project/index.html
+++ b/public/project/internal-project/index.html
@@ -455,7 +455,7 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://twitter.com/georgecushen" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://twitter.com/simonajsimona" target="_blank" rel="noopener">
     <i class="fab fa-twitter mr-1"></i>
     Follow
   </a>
@@ -659,7 +659,7 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://twitter.com/georgecushen" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://twitter.com/simonajsimona" target="_blank" rel="noopener">
     <i class="fab fa-twitter mr-1"></i>
     Follow
   </a>
