--- a/public/talk/data-manip/index.html
+++ b/public/talk/data-manip/index.html
@@ -535,9 +535,9 @@
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Event</div>
           <div class="col-12 col-md-9">
-            
+            <a href="https://www.sgsss.ac.uk/summer-school-2019/" target="_blank" rel="noopener">
             Scottish Graduate School of Social Science Summer School
-            
+            </a>
           </div>
         </div>
       </div>
