commit on skills

--- a/public/index.html
+++ b/public/index.html
@@ -573,7 +573,7 @@
   <div class="col-12 col-sm-4">
     <div class="featurette-icon"><i class="fab fa-r-project"></i></div>
     <h3>R Programming</h3>
-    <p>Data Analytics, Data Visualisation and Literacy Programming with R Markdown</p>
+    <p>Data Analytics, Data Visualisation and R Markdown</p>
   </div>
   
   
@@ -605,7 +605,7 @@
   
   <div class="col-12 col-sm-4">
     <div class="featurette-icon"><i class="fas fa-users"></i></div>
-    <h3>Qualitative research</h3>
+    <h3>Qualitative research software</h3>
     <p>NVivo, ATLAS-ti</p>
   </div>
   
@@ -617,7 +617,7 @@
   <div class="col-12 col-sm-4">
     <div class="featurette-icon"><i class="fas fa-lightbulb"></i></div>
     <h3>Philosophy of Social Science and Social theory</h3>
-    <p>Classical and Contemporary social theory</p>
+    <p>I am mostly interested in how the philosophy of social science and social theory inform social science research</p>
   </div>
   
   
