twitter data mining

--- a/public/404.html
+++ b/public/404.html
@@ -337,6 +337,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/twitter_data/">Twitter Data Mining</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/creating-website/">Building a website with Blogdown and R Markdown</a></li>
   </ul>
   
