A few changes again commit

--- a/public/tutorial/sgss-summer/index.html
+++ b/public/tutorial/sgss-summer/index.html
@@ -28,16 +28,17 @@
   
     
   
-  <meta name="description" content="Session 1: Introduction to Statistical Programming &#43; What is R
-&#43; Why should we learn R
-&#43; The R and RStudio Environment
-&#43; Comments in R
-&#43; Arithmetic in R
-&#43; Objects and assignment operators
-&#43; Vectors: basics
-&#43; Functions and arguments
-&#43; Data frames
-&#43; R Packages
+  <meta name="description" content="Session 1: Introduction to Statistical Programming
+* What is R
+* Why should we learn R
+* The R and RStudio Environment
+* Comments in R
+* Arithmetic in R
+* Objects and assignment operators
+* Vectors: basics
+* Functions and arguments
+* Data frames
+* R Packages
 Session 2: Data Analysis
 The working directory
 Reading data into R
@@ -135,16 +136,17 @@ Univariate descriptive statistics">
   <meta property="og:site_name" content="SIMONA SIMONA">
   <meta property="og:url" content="/tutorial/sgss-summer/">
   <meta property="og:title" content="A gentle introduction to R | SIMONA SIMONA">
-  <meta property="og:description" content="Session 1: Introduction to Statistical Programming &#43; What is R
-&#43; Why should we learn R
-&#43; The R and RStudio Environment
-&#43; Comments in R
-&#43; Arithmetic in R
-&#43; Objects and assignment operators
-&#43; Vectors: basics
-&#43; Functions and arguments
-&#43; Data frames
-&#43; R Packages
+  <meta property="og:description" content="Session 1: Introduction to Statistical Programming
+* What is R
+* Why should we learn R
+* The R and RStudio Environment
+* Comments in R
+* Arithmetic in R
+* Objects and assignment operators
+* Vectors: basics
+* Functions and arguments
+* Data frames
+* R Packages
 Session 2: Data Analysis
 The working directory
 Reading data into R
@@ -432,17 +434,17 @@ Univariate descriptive statistics"><meta property="og:image" content="/img/avata
           <h1 itemprop="name">A gentle introduction to R</h1>
 
           <div class="article-style" itemprop="articleBody">
-            <p><strong>Session 1: Introduction to Statistical Programming</strong>
- + What is R<br />
- + Why should we learn R<br />
- + The R and RStudio Environment<br />
- + Comments in R<br />
- + Arithmetic in R<br />
- + Objects and assignment operators<br />
- + Vectors: basics<br />
- + Functions and arguments<br />
- + Data frames<br />
- + R Packages</p>
+            <p><strong>Session 1: Introduction to Statistical Programming</strong><br />
+ *  What is R<br />
+ *  Why should we learn R<br />
+ *  The R and RStudio Environment<br />
+ *  Comments in R<br />
+ *  Arithmetic in R<br />
+ *  Objects and assignment operators<br />
+ *  Vectors: basics<br />
+ *  Functions and arguments<br />
+ *  Data frames<br />
+ *  R Packages</p>
 
 <p><strong>Session 2: Data Analysis</strong><br />
    The working directory<br />
