Commit on website

--- a/public/index.html
+++ b/public/index.html
@@ -1962,7 +1962,7 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      Building a website I will come back to this post later to finish it up. But before anyone mistakes me for a coder or a computer science …
+      Building a website It is always a good idea to tell others when you come across a fantastic resource to help others and also to give …
     </div>
     
 
