--- a/public/index.html
+++ b/public/index.html
@@ -1962,7 +1962,7 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      Building a website It is always a good idea to tell others when you come across a fantastic resource to help others and also to give …
+      Building a website It is always a good idea to spread the good news when you come across a fantastic resource to help others and also …
     </div>
     
 
