--- a/public/404.html
+++ b/public/404.html
@@ -337,6 +337,10 @@
   <h2>Posts</h2>
   
   <ul>
+    <li><a href="/post/teaching/">Teaching Research Software and Statistical Programming to Social Science Students: A note to Instructors</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/post/twitter_data/">Twitter Data Mining</a></li>
   </ul>
   
