--- a/public/tutorial/sgss-summer-datamanip/index.html
+++ b/public/tutorial/sgss-summer-datamanip/index.html
@@ -368,6 +368,10 @@
         <a href="/tutorial/sgss-summer/">A gentle introduction to R (SGSSS)</a>
       </li>
       
+      <li >
+        <a href="/tutorial/qstep-summer/">Introduction to R (Q-Step Summer School)</a>
+      </li>
+      
       <li class="active">
         <a href="/tutorial/sgss-summer-datamanip/">Data manipulation with R (SGSSS)</a>
       </li>
