--- a/public/tutorial/qstep-summer/index.html
+++ b/public/tutorial/qstep-summer/index.html
@@ -392,6 +392,10 @@
         <a href="/tutorial/sgss-summer/">A gentle introduction to R (SGSSS)</a>
       </li>
       
+      <li >
+        <a href="/tutorial/applied_star/">Applied Statistics 1 (Dr. Tsitsou)</a>
+      </li>
+      
       <li class="active">
         <a href="/tutorial/qstep-summer/">Introduction to R (Q-Step Summer School)</a>
       </li>
