--- a/public/tutorial/applied_star/index.html
+++ b/public/tutorial/applied_star/index.html
@@ -366,6 +366,10 @@ You may download the folder that contains all materials for this session here"><
         <a href="/tutorial/sgss-summer/">A gentle introduction to R (SGSSS)</a>
       </li>
       
+      <li >
+        <a href="/tutorial/stats_2/">Applied Statistics</a>
+      </li>
+      
       <li class="active">
         <a href="/tutorial/applied_star/">Applied Statistics 1 (Dr. Tsitsou)</a>
       </li>
