--- a/public/tutorial/stats_2/index.html
+++ b/public/tutorial/stats_2/index.html
@@ -28,13 +28,14 @@
   
     
   
-  <meta name="description" content="Session 2: Applied Statistics * Inference and the role of probability
-* Hypothesis testing
-* 1-way ANOVA
-* Chi-squared tests
-* Correlation
-* Regression: simple linear regression, multiple linear regression, categorical explanatory variables in regression and diagnostic checking
-* Outlook
+  <meta name="description" content="Session 2: Applied Statistics
+1. Inference and the role of probability
+2. Hypothesis testing
+3. 1-way ANOVA
+4. Chi-squared tests
+5. Correlation
+6. Regression: simple linear regression, multiple linear regression, categorical explanatory variables in regression and diagnostic checking
+7. Outlook
 You may download the slides here and the folder that containing the data and SPSS work book for this session here">
 
   
@@ -127,13 +128,14 @@ You may download the slides here and the folder that containing the data and SPS
   <meta property="og:site_name" content="SIMONA SIMONA">
   <meta property="og:url" content="/tutorial/stats_2/">
   <meta property="og:title" content="Applied Statistics 2 | SIMONA SIMONA">
-  <meta property="og:description" content="Session 2: Applied Statistics * Inference and the role of probability
-* Hypothesis testing
-* 1-way ANOVA
-* Chi-squared tests
-* Correlation
-* Regression: simple linear regression, multiple linear regression, categorical explanatory variables in regression and diagnostic checking
-* Outlook
+  <meta property="og:description" content="Session 2: Applied Statistics
+1. Inference and the role of probability
+2. Hypothesis testing
+3. 1-way ANOVA
+4. Chi-squared tests
+5. Correlation
+6. Regression: simple linear regression, multiple linear regression, categorical explanatory variables in regression and diagnostic checking
+7. Outlook
 You may download the slides here and the folder that containing the data and SPSS work book for this session here"><meta property="og:image" content="/img/avatar.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -428,14 +430,14 @@ You may download the slides here and the folder that containing the data and SPS
           <h1 itemprop="name">Applied Statistics 2</h1>
 
           <div class="article-style" itemprop="articleBody">
-            <p><strong>Session 2: Applied Statistics</strong>
- *  Inference and the role of probability<br />
- *  Hypothesis testing<br />
- *  1-way ANOVA<br />
- *  Chi-squared tests<br />
- *  Correlation<br />
- *  Regression: simple linear regression, multiple linear regression, categorical explanatory variables in regression and diagnostic checking<br />
- *  Outlook</p>
+            <p><strong>Session 2: Applied Statistics</strong><br />
+ 1. Inference and the role of probability<br />
+ 2. Hypothesis testing<br />
+ 3. 1-way ANOVA<br />
+ 4. Chi-squared tests<br />
+ 5. Correlation<br />
+ 6. Regression: simple linear regression, multiple linear regression, categorical explanatory variables in regression and diagnostic checking<br />
+ 7. Outlook</p>
 
 <p>You may download the slides <a href="https://simonajsimona.com/training/Applied_Statistics_Day 2.pdf" target="_blank">here</a> and the folder that containing the data and SPSS work book for this session <a href="https://simonajsimona.com/training/Course_Data.zip" target="_blank">here</a></p>
 
