--- a/public/404.html
+++ b/public/404.html
@@ -355,6 +355,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/structural/">Researching the Influence of Structural Factors on Maternal Healthcare Utilisation in sub-Saharan Africa: A systematic review of Multilevel Models</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/male-involvement/">Exploring Male Participation in Maternal Healthcare in a Patriarchal Population: An Agent-Based Model</a></li>
   </ul>
   
@@ -368,10 +372,6 @@
   
   <ul>
     <li><a href="/publication/truck-drivers/">A Qualitative study of migrant-related stressors, Psychological outcomes and HIV risk behaviour among truck drivers in Zambia</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/food-sup/">Influence of food supplements on test- ing for HIV and AIDS and adhering to treatment in a resource poor rural setting: A case of Chivuna, Southern Zambia</a></li>
   </ul>
   
   
