bad news indeed

--- a/public/404.html
+++ b/public/404.html
@@ -355,6 +355,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/gender_relations/">Gender Relations, Female Empowerment and Use of Maternal Health care in sub-Saharan Africa: A Multilevel Modelling Study</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/structural/">Researching the Influence of Structural Factors on Maternal Healthcare Utilisation in sub-Saharan Africa: A systematic review of Multilevel Models</a></li>
   </ul>
   
@@ -368,10 +372,6 @@
   
   <ul>
     <li><a href="/publication/risk-behaviour/">“Life at the River is a Living Hell:” Qualitative study of trauma, mental health, substance use and HIV risk behaviour among female fish traders from the Kafue Flatlands in Zambia</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/truck-drivers/">A Qualitative study of migrant-related stressors, Psychological outcomes and HIV risk behaviour among truck drivers in Zambia</a></li>
   </ul>
   
   
